--- a/resources/sass/libs/_vars.scss
+++ b/resources/sass/libs/_vars.scss
@@ -1,32 +1,24 @@
-// breakPoints
+/* layout breakpoints */
 $mobileBreakPoint: 375px;
 $tabletBreakPoint: 768px;
 $desktopBreakPoint: 1440px;
 
-// colors
+/* colors */
 // primary
-$softBlue: hsl(243, 86%, 85%);
-$darkBlue: hsl(243, 87%, 12%);
-// accent
-$green: hsl(163, 95%, 43%);
+$softBlue: hsl(231, 69%, 60%);
+$softRed: hsl(0, 94%, 66%);
 //neutral
-$lightGray: hsl(106, 0%, 98%);
-$gray: hsl(0, 0%, 50%);
-$darkGray: hsl(0, 0%, 17%);
-// typography
-//headings
-$raleWayFontFamily: "Raleway", sans-serif;
-$headingsFontWeight: 700;
-//body
-$openSansFontFamily: "Open Sans", sans-serif;
+$grayishBlue: hsl(229, 8%, 60%);
+$veryDarkBlue: hsl(229, 31%, 21%);
+
+/* typography */
+// body copy
+$bodyFontSize: 18px;
+$bodyFontFamily: "Rubik", sans-serif;
 $regularBodyFontWeight: 400;
-$semiBoldBodyFontWeight: 600;
-$boldBodyFontWeight: 700;
+$semiBoldBodyFontWeight: 500;
 // fontSizes
-$veryShortFontSize: 0.77rem;
-$shortFontSize: 0.9rem;
-$smallHeadingsFontSize: 105%;
-$normalHeadingsFontSize: 135%;
+
 // borderRadius
 $lightBorderRadius: 2.5px;
 
@@ -42,4 +34,3 @@ $veryShortSpacing: 0.1rem;
 $normalLineHeight: 1.5;
 
 // url subdirectory
-$fylo: "/Fylo-landing-page-with-detailed-integrations-section";
